--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "React Chuck Norris",
+  "name": "A react app that fetches Chuck Norris memes",
   "icons": [
     {
       "src": "favicon.ico",
